--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "@testing-library/dom": "^7.20.0",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/user-event": "^12.0.11",
-    "babel-jest": "^26.1.0",
-    "jest": "^26.1.0",
-    "jest-environment-jsdom": "^27.4.6",
-    "jest-html-reporter": "^3.1.3"
+    "babel-jest": "^29.3.1",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "jest-html-reporter": "^3.1.3",
+    "jest-config": "^29.3.1"
   }
 }
