--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "type": "module",
   "dependencies": {
     "express": "^4.17.1",
+    "firebase": "^9.19.1",
     "global": "^4.4.0",
     "jquery": "^3.5.1",
     "path": "^0.12.7"
@@ -30,8 +31,8 @@
     "@testing-library/user-event": "^12.0.11",
     "babel-jest": "^29.3.1",
     "jest": "^29.3.1",
+    "jest-config": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "jest-html-reporter": "^3.1.3",
-    "jest-config": "^29.3.1"
+    "jest-html-reporter": "^3.7.1"
   }
 }
